# oopArray

./: CMakeLists.txt  README.md  application.cpp  application.h  arraycustom.cpp  arraycustom.h  complex.cpp  complex.h  datainterface.h  number.h  tpolinom.cpp  tpolinom.h  userinterface.cpp  userinterface.h  userinterface.ui
